--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,15 +1,11 @@
-section {
-    background-image: url(../assets/img/Background_Contacts.png);
-    background-size: cover;
-
-}
-
-
 
 #header-section {
 
-    background-image: url(../assets/img/Background_Contacts.png);
+
+    background-image: url(../assets/img/Background_Intro.png);
     background-size: cover;
+    object-fit: cover;
+
 
     .img-profile {
         margin-block: 8px 56px;
@@ -65,5 +61,30 @@ section {
     .arrow {
         margin-block: 100px 60px ;
     }
+
+}
+
+ #works-section {
+
+    background-color: var(--gray-200);
+    
+    span {
+        color: var(--red);
+        font: var(--subtitle);
+    }
+    
+
+}
+
+#my-services {
+ 
+   background-color: var(--gray-100); 
+
+
+   header {
+    gap: 8px;
+    padding-block: 88px 56px;
+   }
+
 
 }
