--- a/styles/sections.css
+++ b/styles/sections.css
@@ -88,3 +88,111 @@
 
 
 }
+
+#contacts-section {
+    background-image: url(../assets/img/Background_Contacts.png);
+    background-size: cover;
+    object-fit: cover;
+    place-content: center;
+
+
+
+
+
+    .contacts-texts {
+        gap: 8px;
+        padding-block: 128px 48px;
+    }
+    
+    p {
+        color: var(--gray-500);
+    }
+       
+    span:nth-child(1) {
+        color: var(--purple);
+    
+    }
+}
+
+
+button {
+    border: none;
+    border-radius: 8px;
+    padding: 20px;
+    background-color: var(--gray-300);
+
+    align-items: center;
+    grid-auto-flow: column;
+    align-items: center;
+    text-align: center;
+    justify-self: center;
+
+    grid-template-columns: 7fr 1fr;
+    
+
+    width: 400px;
+    height: 68px;
+    
+
+    a {
+        text-decoration: none;
+        color: var(--gray-500);
+        text-align: center;
+        
+    }
+
+    div:nth-child(1) {
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    gap: 8px;
+
+
+
+    img:nth-child(1) {
+        width: 28px;  
+        height: 28px;  
+
+
+    }
+
+
+    
+    }
+
+    div:nth-child(2) {
+        
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    
+        img:nth-child(1) {
+            width: 20px;  
+            height: 20px;  
+            
+        }
+        
+        }
+
+
+}
+
+.contact-cards {
+    gap: 16px;
+    margin-block: 200PX;
+}
+
+
+
+
+    
+
+
+
+
+    
+
+
