--- a/styles/utility.css
+++ b/styles/utility.css
@@ -53,7 +53,9 @@ span {
 .grid-card {
     display: grid;
     place-items: center;
-    text-align: start;
+    align-self: center;
+    text-align:  center;
+
     
 }
 
@@ -61,9 +63,13 @@ span {
     grid-template-columns: repeat(3, 1fr);
     gap: 24px;
     grid-template-rows: repeat(2, 1fr);
-    justify-self: center;
+
 
 }
 
+
+.btn-hover:hover  {
+    border: 1px solid var(--blue);
+}
 
 
